--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </footer>
 
     <audio id="backgroundMusic" loop>
-        <source src="faded.mp3" type="audio/mpeg">
+        <source src="https://m.soundcloud.com/sheshizm2/alan-walker-faded-original-copy" type="audio/mpeg">
         Tarayıcınız ses dosyasını desteklemiyor.
     </audio>
 
