--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page Site</title>
+    <title>Glerius | Anasayfa</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <a href="wiki.html">Wiki</a>
             </nav>
             <div class="sound-control" onclick="toggleSound()">
-                <img src="https://iconarchive.com/download/i107783/google/noto-emoji-animals-nature/rat.ico" alt="Sound Icon" id="soundIcon">
+                <img src="https://www.freepik.com/icon/volume_6052513#fromView=resource_detail&position=4" alt="Sound Icon" id="soundIcon">
             </div>
         </div>
     </header>
